--- a/css/style.css
+++ b/css/style.css
@@ -113,3 +113,12 @@ blockquote {
         font-size: 2.2em;
     }
 }
+
+/* Featured images inside blog posts */
+.featured-image {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: 1.5rem auto;
+    border-radius: 5px;
+}
